# rails-lsp

./: Cargo.toml  enable.lua
lsp/: Cargo.toml
lsp/src/: lib.rs  workspace.rs
rails-sample/: Gemfile
rails-sample/app/models/: comment.rb
rails-sample/app/views/layouts/: application.html.erb
rails-sample/config/: application.rb  cable.yml  credentials.yml.enc
src/: main.rs
